# ls-usb

./: LICENSE  PrettyDevList.hs  README.markdown  ls-usb.cabal  ls-usb.hs
